Fix tab gap UI & webkit fill color bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,25 +50,28 @@ nav {
     gap: 3rem;
 }
 
-a.tab {
+button.tab {
+    font-size: 1.2rem;
     text-decoration: none;
     color: black;
-    padding: 0.5em 2em;
+    padding: 0.4em 2em;
     border-radius: 10% 10% 0 0;
     z-index: 1;
     /* box-shadow: offset-x offset-y blur-radius spread-radius color */
-    box-shadow:
-        0px -8px 10px 1px rgba(0, 0, 0, 0.2),
+    box-shadow: 0px -8px 10px 1px rgba(0, 0, 0, 0.2),
         /* top */ -8px 0px 10px 1px rgba(0, 0, 0, 0.2),
         /* left */ 8px 0px 10px 1px rgba(0, 0, 0, 0.2); /* right */
+    margin: 0;
 }
 
 #to-do-tab {
     background-color: var(--to-do-background);
+    border-color: var(--to-do-background);
 }
 
 #calendar-tab {
     background-color: var(--calendar-background);
+    border-color: var(--calendar-background);
 }
 
 main {
@@ -118,8 +121,8 @@ hr {
     background-color: var(--tan);
     width: 100%;
     height: 100%;
-    border-radius: 3%;
-    padding: 2rem;
+    border-radius: 4%;
+    padding: 2.5rem;
     box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.2);
 }
 
@@ -188,4 +191,12 @@ button:disabled:hover {
 #count {
     display: flex;
     justify-content: flex-end;
+}
+
+input:-webkit-autofill,
+textarea:-webkit-autofill {
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -webkit-text-fill-color: none;
+    transition: background-color 5000s ease-in-out 0s;
 }
